--- a/demo_sample.ipynb
+++ b/demo_sample.ipynb
@@ -11,8 +11,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 2,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "prepare finished.\n"
+     ]
+    }
+   ],
    "source": [
     "################## 1. Download checkpoints and build models\n",
     "import os\n",
@@ -30,10 +39,12 @@
     "\n",
     "\n",
     "# download checkpoint\n",
+    "\n",
     "hf_home = 'https://huggingface.co/FoundationVision/var/resolve/main'\n",
     "vae_ckpt, var_ckpt = 'vae_ch160v4096z32.pth', f'var_d{MODEL_DEPTH}.pth'\n",
     "if not osp.exists(vae_ckpt): os.system(f'wget {hf_home}/{vae_ckpt}')\n",
     "if not osp.exists(var_ckpt): os.system(f'wget {hf_home}/{var_ckpt}')\n",
+    "print(osp.exists(var_ckpt))\n",
     "\n",
     "# build vae, var\n",
     "patch_nums = (1, 2, 3, 4, 5, 6, 8, 10, 13, 16)\n",
@@ -55,12 +66,15 @@
    ],
    "metadata": {
     "collapsed": false,
-    "is_executing": true
+    "ExecuteTime": {
+     "end_time": "2024-04-23T03:03:35.778914Z",
+     "start_time": "2024-04-23T03:03:35.069744Z"
+    }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "outputs": [],
    "source": [
     "############################# 2. Sample with classifier-free guidance\n",
@@ -68,9 +82,9 @@
     "# set args\n",
     "seed = 0 #@param {type:\"number\"}\n",
     "torch.manual_seed(seed)\n",
-    "num_sampling_steps = 250 #@param {type:\"slider\", min:0, max:1000, step:1}\n",
-    "cfg = 4 #@param {type:\"slider\", min:1, max:10, step:0.1}\n",
-    "class_labels = (980, 980, 437, 437, 22, 22, 562, 562)  #@param {type:\"raw\"}\n",
+    "#num_sampling_steps = 1000 #@param {type:\"slider\", min:0, max:1000, step:1}\n",
+    "cfg = 1.22 #@param {type:\"slider\", min:1, max:10, step:0.1}\n",
+    "class_labels = (167, 167, 437, 437, 22, 22, 562, 21)  #@param {type:\"raw\"}\n",
     "\n",
     "# seed\n",
     "torch.manual_seed(seed)\n",
@@ -95,10 +109,15 @@
     "chw = torchvision.utils.make_grid(recon_B3HW, nrow=8, padding=0, pad_value=1.0)\n",
     "chw = chw.permute(1, 2, 0).mul_(255).cpu().numpy()\n",
     "chw = PImage.fromarray(chw.astype(np.uint8))\n",
-    "chw.show()\n"
+    "chw.show()\n",
+    "    "
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-04-23T03:16:58.558352Z",
+     "start_time": "2024-04-23T03:16:57.158664Z"
+    }
    }
   }
  ],
